# INVIGORATE

./: .gitignore  .gitmodules  README.md  readme.md  requirements.txt
invigorate_msgs/: CMakeLists.txt  package.xml
invigorate_msgs/srv/: Grounding.srv  MeteorScore.srv
invigorate_ros/: CMakeLists.txt  package.xml  setup.py
invigorate_ros/invigorate/: launch_detectron2.sh  launch_ingress.sh  launch_vmrn.sh
invigorate_ros/invigorate/config/: config.py
invigorate_ros/invigorate/faster_rcnn_detector/: CMakeLists.txt
invigorate_ros/invigorate/fetch_robot_stl/: visual.ply
invigorate_ros/invigorate/invigorate/: greedy.py  heuristic.py  invigorate.py  invigorate_ijrr.py  invigorate_ijrr_v2.py  invigorate_ijrr_v3.py  invigorate_ijrr_v4.py  invigorate_ijrr_v5.py  invigorate_ijrr_v6.py  no_multistep.py
invigorate_ros/invigorate/invigorate_models/: greedy.py  heuristic.py  invigorate_ijrr.py  invigorate_ijrr_no_point.py  invigorate_ijrr_point.py  invigorate_ijrr_v6.py  (+4 more)
src/: dockerfile  launch_docker.sh  launch_faster_rcnn_detector.sh  launch_ingress.sh  launch_mattnet.sh  launch_mattnet_v2.sh  launch_vlbert.sh  launch_vmrn.sh  objects.txt  playgorund.py  readme.md  requirements.txt
src/config/: config.py
src/faster_rcnn_detector/: Readme.txt  package.xml  setup.py
src/grasp_planner/: grasp_planner.py  integrase.py
src/ingress_ros/: CMakeLists.txt  package.xml  setup.py
src/invigorate/: baseline.py  greedy.py  heuristic.py  integrase.py  integrase_v2.py  invigorate.py  invigorate_old.py  no_belief_tracking.py  no_interaction.py  no_multistep.py  tpn.py
src/invigorate_msgs/: CMakeLists.txt  package.xml
src/mattnet_server/: CMakeLists.txt  setup.py
src/mrt_detector/: CMakeLists.txt  package.xml
src/scripts/: _init_path.py  calibrate_fetch.py  dataset_demo.py  density_viewer.py  fetch_demo.py  fetch_robot.py  integrase.py  invigorate_demo.py  object_detector_density.py  robot_demo_ingress_vmrn.py  test.py  test_grounding.py  test_mattnet_vs_ingress.py  test_multistep_vs_singlestep.py  test_relation_detection.py
src/tests/: add_gt.py  test.py  test_answer_process.py  test_grounding.py  test_invigorate_vs_vilbert.py  test_relation_detection.py  test_vilbert_service.py  test_vlbert.py  test_vlbert_service.py  test_vlbert_vs_vilbert.py
src/vilbert_service/: CMakeLists.txt  setup.py
src/vlbert/: CMakeLists.txt  package.xml
src/vlbert_service/: CMakeLists.txt  package.xml
src/vmrn_msgs/: CMakeLists.txt  package.xml
src/vmrn_old/: CMakeLists.txt  package.xml
(+184 files in other folders)
